--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header, footer{
 header{
 	position: sticky;
     top: 0;	
+    z-index: 1;
 }
 
 .header-wrapper {
@@ -78,15 +79,17 @@ nav ul li a {
 .main-content{
 	min-height: 100vh;
 	overflow: hidden;
-	margin-top: 70px;
+	margin: 70px 10px 20px;
+}
+.cards-wrapper{
 
+	margin-bottom: 20px;
 }
 .cards-wrapper-inner {
-    border-radius: 3px;
+    border-radius: 4px;
     background-color: #fff;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.1);
-    width: 344px;
-    max-width: 100%;
+   
 }
 .box-header {
     font-size: 1.5rem;
@@ -95,15 +98,36 @@ nav ul li a {
 }
 .card-description {
     padding: 10px;
-    max-height: 200px;
-  
+    max-height: 100%;
     overflow: hidden;
+    min-height: 230px;
 
 }
 
 .card-description span{
   	text-overflow: ellipsis;
 }
+.item-lists{
+
+    list-style: none;
+
+}
+
+/* Aside */
+.aside {
+    padding: 20px;
+  	box-shadow: 0 0 8px 0 rgba(0,0,0,0.2);
+    text-align: justify;
+    transition: all .2s ease-in-out;
+}
+.aside:hover{
+	transform: scale(1.1);
+}
+
+
+
+
+
 /*Footer*/
 footer span {
    
@@ -154,6 +178,8 @@ i.fas {
     background-size: cover;
     height: 200px;
     background-position: center center;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
 }
 
 
@@ -172,16 +198,15 @@ i.fas {
     margin-left: auto;
     max-width: 750px;
 }
-@media (min-width: 768px)
-.col-sm-6 {
-    width: 50%;
-}
+
 .panel-heading {
-    background-color: forestgreen;
+    background-color: #600039;
+    color: white;
 }
 .panel-body {
-    background-color: white;
+    background-color: #fdf4f9;
     padding: 15px;
+    font-size: 14px;
 }
 .panel-title {
     margin-bottom: 0;
@@ -243,7 +268,28 @@ i.fas {
     top: 22px;
 }
 
-@media screen and (max-width: 768px){
+
+@media (max-width: 1200px){
+	.container {
+    	max-width: 1200px !important;
+	}
+	.logo {
+	    width: 200px;
+	    
+	}
+	nav {
+    	top: 26px;
+	}
+	nav ul li a {
+   
+    font-size: 14px;
+	}
+}
+@media (min-width: 768px)
+.col-sm-6 {
+    width: 50%;
+}
+@media screen and (max-width: 840px){
 
 	footer .col-md:nth-child(2) {
 		margin-top: 20px;
@@ -294,6 +340,18 @@ i.fas {
     width: 100%;
     height: 100vh;
     position: absolute;
+
+}
+.show-menu >li{
+	margin-bottom: 20px;
+}
+.show-menu >li> a {
+    font-size: 1rem;   
+}
+.show-menu >li> a:hover {
+    color: white;
+
+    
 }
 .mobile-menu__wrapper {
    
@@ -327,4 +385,16 @@ i.fas {
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0);
 
 }
+}
+
+@media screen and (max-width: 576px){
+	.cards-wrapper-inner, .panel-group {
+   		 margin: 20px;
+}
+	.aside{
+		max-width: 480px;
+		margin-left: auto;
+		margin-bottom: 40px;
+		margin-right: auto;
+	}
 }
